forms page spacing fix

--- a/css/forms.scss
+++ b/css/forms.scss
@@ -49,7 +49,7 @@
 
 @media (min-width: 850px) {
   .row:first-child {
-    margin: 5rem auto;
+    margin: 5rem auto 0 auto;
     padding: 0 5rem;
   }
 
